# garsoft

./: .gitignore  CMakeLists.txt  README.md
Ana/: AnaUtils.cxx  AnaUtils.h  BackTrackerAna.fcl  BackTrackerAna_module.cc  CAFMaker.fcl  CAFMaker_module.cc  CMakeLists.txt  CaloAnaTree.fcl  CaloAnaTree_module.cc  ParamSim.fcl  ParamSim_module.cc  StructuredTree.fcl  StructuredTree_module.cc  StructuredTree_module.cc_save  anajob.fcl  anajob_CDR.fcl  anajob_backtrackerana.fcl  anajob_spyv2.fcl  anajob_structured.fcl  anashrub.fcl  anashrub_module.cc  anatest.fcl  anatest_module.cc  anatestjob.fcl  anatree.fcl  anatree_module.cc  anautil.cxx  anautil.h  cafmakerjob.fcl  caloanajob.fcl  paramsimjob.fcl  shrubjob.fcl  shrubutil.cxx  shrubutil.h
Ana/DSTproduction/: CMakeLists.txt  Documentation.txt  Makefile  Makefile_please_save  PlotRatio.C  PlotRatio1D.C  includeROOT.h  makeDST.cxx  treeReader.h
Ana/ExampleAnalysisScripts/: garana.C  garana.h
Ana/ExampleAnatreeUse/: AnaTreeFrame.cxx  CMakeLists.txt  InputFiles.list  Makefile_please_save  README.txt  makeDST.cxx  old_examp.cxx
Ana/ExampleGalleryScripts/: hitdump.C
Ana/HeavyNeutralLeptonAnalysis/: CMakeLists.txt  HNLAnalysis.fcl  HNLAnalysis_job.fcl  HNLAnalysis_module.cc
Ana/ParamSim/: CAF.cpp  CAF.h  CMakeLists.txt  README.md  rebld.sh  test_cafanatree.sh
Ana/TPCperformance/: CMakeLists.txt  MatchingPerformance.fcl  MatchingPerformance_module.cc  MomentumPerformance.fcl  MomentumPerformance_module.cc  TPCperformanceStudy.fcl
Ana/doc/: DSTproduction_documentation.txt  anatree_documentation.txt
Ana/gntpc_dune/: CMakeLists.txt
DetectorInfo/: CMakeLists.txt  ClockConstants.h  DetectorClocks.fcl  DetectorClocks.h  DetectorClocksException.h  DetectorClocksService.h  DetectorClocksServiceGAr.h  DetectorClocksServiceStandard.h  DetectorClocksServiceStandardGAr.h  DetectorClocksServiceStandardGAr_service.cc  DetectorClocksServiceStandard_service.cc  DetectorClocksStandard.cxx  DetectorClocksStandard.h  DetectorClocksStandardGAr.cxx  DetectorClocksStandardGAr.h  DetectorProperties.fcl  DetectorProperties.h  DetectorPropertiesService.h  DetectorPropertiesServiceStandard.h  DetectorPropertiesServiceStandardGAr.h  DetectorPropertiesServiceStandardGAr_service.cc  DetectorPropertiesServiceStandard_service.cc  DetectorPropertiesStandard.cxx  DetectorPropertiesStandard.h  DetectorPropertiesStandardTestHelpers.h  ECALProperties.fcl  ECALProperties.h  ECALPropertiesService.h  ECALPropertiesServiceStandard.h  ECALPropertiesServiceStandard_service.cc  ECALPropertiesStandard.cxx  ECALPropertiesStandard.h  ElecClock.cxx  ElecClock.h  GArMagneticField.cxx  GArMagneticField.h  GArProperties.fcl  GArProperties.h  GArPropertiesService.h  GArPropertiesServiceStandard.h  (+13 more)
EventGenerator/: CMakeLists.txt  GeneratedEventTimestamp_plugin.cc  RadioGen_module.cc  SingleGen.fcl  SingleGen_module.cc  TextFileGen.fcl  TextFileGen_module.cc  prodsingle.fcl  prodtext.fcl  toadtfgen.fcl
EventGenerator/CRY/: CMakeLists.txt  CosmicsGen.fcl  CosmicsGen_module.cc  prodcosmics.fcl
EventGenerator/GENIE/: CMakeLists.txt  GENIEGen.fcl  GENIEGen_module.cc  GNuMIFlux.xml  prodgenie.fcl  prodgenie_dayone.fcl  prodgenietpc.fcl  prodgenieworld.fcl
EventGenerator/LArIAT_particleGun/: README.md  filename.txt  mytfgen.fcl
Geometry/: AliTPCROC.cxx  AuxDetChannelMapAlg.cxx  AuxDetChannelMapAlg.h  AuxDetExptGeoHelperInterface.h  AuxDetGeo.cxx  AuxDetGeo.h  AuxDetGeoObjectSorter.cxx  AuxDetGeoObjectSorter.h  AuxDetGeometry.h  AuxDetGeometryCore.cxx  AuxDetGeometryCore.h  AuxDetGeometryHelperExample.h  AuxDetGeometryHelperExample_service.cc  AuxDetGeometry_service.cc  AuxDetSensitiveGeo.cxx  AuxDetSensitiveGeo.h  BitFieldCoder.cxx  BitFieldCoder.h  CMakeLists.txt  ChannelMapAlg.cxx  ChannelMapAlg.h  ChannelMapStandardAlg.cxx  ChannelMapStandardAlg.h  ECALSegmentationAlg.cxx  ECALSegmentationAlg.fcl  ECALSegmentationAlg.h  ECALSegmentationGridXYAlg.cxx  ECALSegmentationGridXYAlg.h  ECALSegmentationMultiGridStripXYAlg.cxx  ECALSegmentationMultiGridStripXYAlg.h  ExptGeoHelperInterface.h  Geometry.fcl  Geometry.h  GeometryCore.cxx  GeometryCore.h  GeometryGAr.h  GeometryGArConfigurationWriter_service.cc  GeometryGAr_service.cc  Geometry_CDR.fcl  Geometry_DayOne_SPY.fcl  (+11 more)
Geometry/ChannelMapAlgs/: AliTPCROC.cxx  AliTPCROC.h  AuxDetChannelMapAlg.cxx  AuxDetChannelMapAlg.h  CMakeLists.txt  ChannelMapAlg.cxx  ChannelMapAlg.h  ChannelMapStandardAlg.cxx  ChannelMapStandardAlg.h  ECALSegmentationAlg.cxx  ECALSegmentationAlg.fcl  ECALSegmentationAlg.h  ECALSegmentationGridXYAlg.cxx  ECALSegmentationGridXYAlg.h  ECALSegmentationMultiGridStripXYAlg.cxx  ECALSegmentationMultiGridStripXYAlg.h  MinervaSegmentationAlg.cxx  MinervaSegmentationAlg.fcl  MinervaSegmentationAlg.h  MuIDSegmentationAlg.fcl  ScintillatorRefractions.fcl  SegmentationAlg.cxx  SegmentationAlg.h  SegmentationAlgs.fcl  SegmentationGridXYAlg.cxx  SegmentationGridXYAlg.h  (+8 more)
NuSys/: NUSYS.C  (+3 more)
Pandora/: BFieldPlugin.cxx  BFieldPlugin.h  CMakeLists.txt  CaloHitCreator.cxx  CaloHitCreator.h  GeometryCreator.cxx  GeometryCreator.h  MCParticleCreator.cxx  MCParticleCreator.h  PandoraInterface.fcl  PandoraInterface_module.cc  PfoCreator.cxx  PfoCreator.h  PseudoLayerPlugin.cxx  PseudoLayerPlugin.h  RotationTransformation.cxx  TrackCreator.cxx  TrackCreator.h  run_pandora.fcl
Utilities/: AssociationUtil.h  BitFieldCoder.cxx  BitFieldCoder.h  CMakeLists.txt  ClusterShapes.cxx  ClusterShapes.h  DumpGTruth_module.cc  ECALSegmentationAlg.cxx  ECALSegmentationAlg.h  ECALSegmentationGridAlg.cxx  ECALSegmentationGridAlg.h  ECALSegmentationGridXYAlg.cxx  ECALSegmentationGridXYAlg.h  ECALSegmentationMultiGridStripXYAlg.cxx  ECALSegmentationMultiGridStripXYAlg.h  ECALSegmentationStripXAlg.cxx  ECALSegmentationStripXAlg.h  ECALSegmentationStripYAlg.cxx  ECALSegmentationStripYAlg.h  ECALUtils.cxx  ECALUtils.h  GeneratedParticleInfo.h  KDTreeLinkerAlgoT.h  KDTreeLinkerToolsT.cxx  KDTreeLinkerToolsT.h  TrackPropagator.cxx  TrackPropagator.h  dump_mcparticles.fcl  eventdump.fcl  geo_vectors.h  geo_vectors_utils.h  geo_vectors_utils_TVector.h
(+644 files in other folders)
